Got Scale, now keeping distance from wall

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,12 +121,12 @@ target_link_libraries(scan_room ctello ${Pangolin_LIBRARIES})
 target_link_libraries(scan_room ${OpenCV_LIBS} ORB_SLAM2)
 
 ## Scale --------------------------------------------------------------------
-add_executable(scale examples/scale_ORBSlam.cpp)
+add_executable(scale_ORBSlam examples/scale_ORBSlam.cpp)
 
-target_include_directories(scale PRIVATE include)
+target_include_directories(scale_ORBSlam PRIVATE include)
 
-target_link_libraries(scale ctello ${Pangolin_LIBRARIES})
-target_link_libraries(scale ${OpenCV_LIBS} ORB_SLAM2)
+target_link_libraries(scale_ORBSlam ctello ${Pangolin_LIBRARIES})
+target_link_libraries(scale_ORBSlam ${OpenCV_LIBS} ORB_SLAM2)
 
 ## Flip -----------------------------------------------------------------------
 add_executable(flip examples/flip.cpp)
